# codercheckin

./: .dockerignore  .env.localtest.example  .gitignore  Dockerfile  README-en.md  README.md  attendance_checkin.py  checkin_response.py  checkin_runner.py  config.py  docker-compose.build.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run.py  runtime_log.py  scheduler.py
.agents/skills/trellis-finish-work/: SKILL.md
.claude/: settings.json
.claude/agents/: trellis-check.md  trellis-implement.md
.codex/agents/: trellis-check.toml  trellis-implement.toml
.codex/hooks/: session-start.py
.cursor/agents/: trellis-check.md  trellis-implement.md
.cursor/commands/: trellis-finish-work.md
.cursor/hooks/: inject-workflow-state.py  session-start.py
.github/workflows/: dockerhub-publish.yml
.trellis/: .developer  .gitignore  .template-hashes.json  .version  workflow.md
.trellis/spec/backend/: database-guidelines.md  directory-structure.md  error-handling.md  index.md  logging-guidelines.md  quality-guidelines.md
.trellis/tasks/04-27-docker-cookiecloud/: prd.md  task.json
.trellis/tasks/04-29-migrate-to-0.5.0-beta.17/: task.json
.trellis/workspace/: index.md
cookiecloud/: __init__.py  client.py
deepflood/: deepflood.py
nodeseek/: nodeseek.py
onepoint3acres/: onepoint3acres.py
telegram/: notify.py
tests/: log_assertions.py  test_attendance_checkin.py  test_checkin_response.py  test_checkin_runner.py  test_cookiecloud_client.py  test_platform_imports.py  test_runtime_log.py  test_scheduler.py  test_v2ex.py
v2ex/: v2ex.py
(+100 files in other folders)
