[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudcheckin"
version = "0.1.0"
description = "NAS-friendly multi-platform check-in automation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "curl_cffi",
    "python-dotenv",
    "cryptography",
    "croniter",
    "tzdata",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools]
py-modules = [
    "attendance_checkin",
    "checkin_response",
    "checkin_runner",
    "config",
    "runtime_log",
    "run",
    "scheduler",
]

[tool.setuptools.packages.find]
include = [
    "cookiecloud",
    "deepflood",
    "nodeseek",
    "telegram",
    "v2ex",
]
